# src/repository/entities.ts
@@ -33,6 +33,7 @@ export class User extends BaseEntity {
     updatedAt: Date;
 }
 
+@Entity({name: "suppliers"})
 export class Supplier extends BaseEntity {
     @PrimaryGeneratedColumn()
     id: number;
@@ -41,13 +42,13 @@ export class Supplier extends BaseEntity {
     name: string;
 
     @Column({name: "phone_number", nullable: false})
-    phoneNumber: string;
+    phoneNumber?: string;
 
     @Column({name: "email", nullable: false})
-    email: string;
+    email?: string;
 
     @Column({name: "address", nullable: false})
-    address: string;
+    address?: string;
 
     @Column({ name: "created_at", type: "timestamp", default: () => "current_timestamp" })
     createdAt: Date;
